remove tab char

--- a/PyCuda/get_device_attrs.ipynb
+++ b/PyCuda/get_device_attrs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -115,15 +115,15 @@
     "\n",
     "for device_num in range(device_cnt):\n",
     "\n",
-    "\tdevice = drv.Device(device_num)\n",
+    "    device = drv.Device(device_num)\n",
     "    \n",
     "    # 디바이스의 속성을 얻어옴 (Dictionary 형식)\n",
-    "\tattrs = device.get_attributes().items()\n",
+    "    attrs = device.get_attributes().items()\n",
     "\n",
-    "\tprint(\"\\n===== 디바이스 속성 (Device Num={0}) =====\".format(device_num))\n",
+    "    print(\"\\n===== 디바이스 속성 (Device Num={0}) =====\".format(device_num))\n",
     "\n",
-    "\tfor key, value in attrs:\n",
-    "\t\tprint(\"{0} = {1}\".format(key, value))"
+    "    for key, value in attrs:\n",
+    "        print(\"{0} = {1}\".format(key, value))"
    ]
   },
   {
