init() 제거 새로운 예제

--- a/PyCuda/get_device_attrs.ipynb
+++ b/PyCuda/get_device_attrs.ipynb
@@ -107,8 +107,7 @@
    ],
    "source": [
     "import pycuda.driver as drv\n",
-    "\n",
-    "drv.init()\n",
+    "import pycuda.autoinit\n",
     "\n",
     "# 디바이스의 갯수를 얻어옴\n",
     "device_cnt = drv.Device.count()\n",
