변수명 변경

--- a/PyCuda/simple_assign.ipynb
+++ b/PyCuda/simple_assign.ipynb
@@ -93,17 +93,15 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Kernel code\n",
     "kernel_code = \"\"\"\n",
-    "__global__ void assign(int* data_arr)\n",
+    "__global__ void assign(int* arry)\n",
     "{\n",
     "  int idx = threadIdx.x;\n",
-    "  data_arr[idx] = idx;\n",
+    "  arry[idx] = idx;\n",
     "}\n",
     "\"\"\"\n",
     "\n",
