--- a/PyCuda/simple_add.ipynb
+++ b/PyCuda/simple_add.ipynb
@@ -216,8 +216,8 @@
    "metadata": {},
    "source": [
     "### Thread의 갯수보다 더 큰 Size의 배열 처리\n",
-    "* numpy array의 size는 10개, Block 2개\n",
-    "* Block당 Thread 3개 사용 (총 6개의 Thread)"
+    "* numpy array의 size는 10개\n",
+    "* Block 2개, Block당 Thread 3개 사용 (총 6개의 Thread)"
    ]
   },
   {
