--- a/PyCuda/simple_add.ipynb
+++ b/PyCuda/simple_add.ipynb
@@ -22,13 +22,13 @@
      "output_type": "stream",
      "text": [
       "a_arr =\n",
-      "[4 9 1 2 8 8]\n",
+      "[6 0 7 8 5 4]\n",
       "\n",
       "b_arr =\n",
-      "[6 9 1 3 4 1]\n",
+      "[4 1 4 1 4 3]\n",
       "\n",
       "sum_arr =\n",
-      "[10 18  2  5 12  9]\n"
+      "[10  1 11  9  9  7]\n"
      ]
     }
    ],
@@ -78,10 +78,10 @@
      "text": [
       "\n",
       "GPU로 계산 =\n",
-      "[10 18  2  5 12  9]\n",
+      "[10  1 11  9  9  7]\n",
       "\n",
       "CPU로 계산 =\n",
-      "[10 18  2  5 12  9]\n"
+      "[10  1 11  9  9  7]\n"
      ]
     }
    ],
@@ -99,11 +99,11 @@
     "mod = compiler.SourceModule(kernel_code)\n",
     "\n",
     "# Get kernel function\n",
-    "assign_func = mod.get_function(\"add\")\n",
+    "add_func = mod.get_function(\"add\")\n",
     "\n",
     "# Run\n",
     "result_arr = np.zeros_like(a_arr)\n",
-    "assign_func(cuda.In(a_arr), cuda.In(b_arr), cuda.Out(result_arr), block=(6, 1, 1))\n",
+    "add_func(cuda.In(a_arr), cuda.In(b_arr), cuda.Out(result_arr), block=(6, 1, 1))\n",
     "\n",
     "# 출력\n",
     "print(\"\\nGPU로 계산 =\")\n",
@@ -132,10 +132,10 @@
      "text": [
       "\n",
       "GPU로 계산 =\n",
-      "[10 18  2  5 12  9]\n",
+      "[10  1 11  9  9  7]\n",
       "\n",
       "CPU로 계산 =\n",
-      "[10 18  2  5 12  9]\n"
+      "[10  1 11  9  9  7]\n"
      ]
     }
    ],
@@ -153,11 +153,11 @@
     "mod = compiler.SourceModule(kernel_code)\n",
     "\n",
     "# Get kernel function\n",
-    "assign_func = mod.get_function(\"add\")\n",
+    "add_func = mod.get_function(\"add\")\n",
     "\n",
     "# Run\n",
     "result_arr = np.zeros_like(a_arr)\n",
-    "assign_func(cuda.In(a_arr), cuda.In(b_arr), cuda.Out(result_arr), block=(3, 1, 1), grid=(2, 1))\n",
+    "add_func(cuda.In(a_arr), cuda.In(b_arr), cuda.Out(result_arr), block=(3, 1, 1), grid=(2, 1))\n",
     "\n",
     "# 출력\n",
     "print(\"\\nGPU로 계산 =\")\n",
@@ -183,13 +183,13 @@
      "output_type": "stream",
      "text": [
       "a_arr =\n",
-      "[4 9 1 2 8 8]\n",
+      "[6 0 7 8 5 4]\n",
       "\n",
       "누적하여 더하기\n",
       "[0 0 0 0 0 0]\n",
-      "[4 9 1 2 8 8]\n",
-      "[ 8 18  2  4 16 16]\n",
-      "[12 27  3  6 24 24]\n"
+      "[6 0 7 8 5 4]\n",
+      "[12  0 14 16 10  8]\n",
+      "[18  0 21 24 15 12]\n"
      ]
     }
    ],
@@ -201,13 +201,13 @@
     "result_arr = np.zeros_like(a_arr)\n",
     "print(result_arr)\n",
     "\n",
-    "assign_func(cuda.In(a_arr), cuda.In(result_arr), cuda.Out(result_arr), block=(3, 1, 1), grid=(2, 1))\n",
+    "add_func(cuda.In(a_arr), cuda.In(result_arr), cuda.Out(result_arr), block=(3, 1, 1), grid=(2, 1))\n",
     "print(result_arr)\n",
     "\n",
-    "assign_func(cuda.In(a_arr), cuda.In(result_arr), cuda.Out(result_arr), block=(3, 1, 1), grid=(2, 1))\n",
+    "add_func(cuda.In(a_arr), cuda.In(result_arr), cuda.Out(result_arr), block=(3, 1, 1), grid=(2, 1))\n",
     "print(result_arr)\n",
     "\n",
-    "assign_func(cuda.In(a_arr), cuda.In(result_arr), cuda.Out(result_arr), block=(3, 1, 1), grid=(2, 1))\n",
+    "add_func(cuda.In(a_arr), cuda.In(result_arr), cuda.Out(result_arr), block=(3, 1, 1), grid=(2, 1))\n",
     "print(result_arr)"
    ]
   },
@@ -230,13 +230,13 @@
      "output_type": "stream",
      "text": [
       "a_arr =\n",
-      "[0 8 2 0 2 4 6 1 7 4]\n",
+      "[7 1 8 0 1 1 1 5 0 0]\n",
       "\n",
       "b_arr =\n",
-      "[6 2 8 6 3 0 2 8 7 7]\n",
+      "[8 6 9 2 4 2 7 9 7 3]\n",
       "\n",
       "sum_arr =\n",
-      "[ 6 10 10  6  5  4  8  9 14 11]\n"
+      "[15  7 17  2  5  3  8 14  7  3]\n"
      ]
     }
    ],
@@ -264,10 +264,10 @@
      "text": [
       "\n",
       "GPU로 계산 =\n",
-      "[ 6 10 10  6  5  4  8  9 14 11]\n",
+      "[15  7 17  2  5  3  8 14  7  3]\n",
       "\n",
       "CPU로 계산 =\n",
-      "[ 6 10 10  6  5  4  8  9 14 11]\n"
+      "[15  7 17  2  5  3  8 14  7  3]\n"
      ]
     }
    ],
@@ -300,10 +300,10 @@
     "cuda.memcpy_htod(device_arr_size, ret_arr_size[0])\n",
     "\n",
     "# Get kernel function\n",
-    "assign_func = mod.get_function(\"add\")\n",
+    "add_func = mod.get_function(\"add\")\n",
     "\n",
     "# Run\n",
-    "assign_func(cuda.In(a_arr), cuda.In(b_arr), cuda.Out(result_arr), block=(3, 1, 1), grid=(2, 1))\n",
+    "add_func(cuda.In(a_arr), cuda.In(b_arr), cuda.Out(result_arr), block=(3, 1, 1), grid=(2, 1))\n",
     "\n",
     "# 출력\n",
     "print(\"\\nGPU로 계산 =\")\n",
