parallel reduction with shared memory 구현

--- a/PyCuda/reduction.ipynb
+++ b/PyCuda/reduction.ipynb
@@ -19,10 +19,10 @@
      "output_type": "stream",
      "text": [
       "arr =\n",
-      "[2 7 7 7 7 4 8 0 7 8]\n",
+      "[4 5 4 0 6 4 1 0 2 0]\n",
       "\n",
       "sum_arr\n",
-      "57\n"
+      "26\n"
      ]
     }
    ],
@@ -69,10 +69,10 @@
      "text": [
       "\n",
       "CPU로 계산 =\n",
-      "57\n",
+      "26\n",
       "\n",
       "GPU로 계산 =\n",
-      "8\n"
+      "0\n"
      ]
     }
    ],
@@ -123,10 +123,10 @@
      "text": [
       "\n",
       "CPU로 계산 =\n",
-      "57\n",
+      "26\n",
       "\n",
       "GPU로 계산 =\n",
-      "57\n"
+      "26\n"
      ]
     }
    ],
@@ -162,6 +162,82 @@
    "source": [
     "### Parallel reduction with shared memory\n",
     "* 코드가 복잡하지만 빠르다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Optimizing Parallel Reduction in CUDA의 Reduction #1을 구현<br/>\n",
+    "해당 Paper는 http://developer.download.nvidia.com/compute/cuda/1.1-Beta/x86_website/projects/reduction/doc/reduction.pdf 을 참고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "CPU로 계산 =\n",
+      "26\n",
+      "\n",
+      "GPU로 계산 =\n",
+      "[19  7]\n",
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kernel code\n",
+    "kernel_code = \"\"\"\n",
+    "__global__ void sum_all(int* in_arr, int* ret_arr)\n",
+    "{\n",
+    "  extern __shared__ int sdata[];\n",
+    "\n",
+    "  int tid = threadIdx.x;\n",
+    "  int idx = threadIdx.x + blockIdx.x * blockDim.x;\n",
+    "  sdata[tid] = in_arr[idx];\n",
+    "  __syncthreads();\n",
+    "\n",
+    "  // Shared memory에서 reduction한다\n",
+    "  for ( int s=1 ; s<blockDim.x ; s*=2 )\n",
+    "  {\n",
+    "    if ( 0 == tid % (2*s) )\n",
+    "    {\n",
+    "      sdata[tid] += sdata[tid+s];\n",
+    "    }\n",
+    "    __syncthreads();\n",
+    "  }\n",
+    "  \n",
+    "  // Global memory에 결과를 쓴다\n",
+    "  if ( 0 == tid )\n",
+    "  {\n",
+    "    ret_arr[blockIdx.x] = sdata[0];\n",
+    "  }\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "# Compile the kernel code\n",
+    "mod = compiler.SourceModule(kernel_code)\n",
+    "\n",
+    "# Get kernel function\n",
+    "sum_func = mod.get_function(\"sum_all\")\n",
+    "\n",
+    "# Run & Print\n",
+    "THREAD_CNT = 5\n",
+    "BLOCK_CNT = 2\n",
+    "result_arr = np.zeros(BLOCK_CNT, dtype=int)\n",
+    "sum_func(cuda.In(arr), cuda.Out(result_arr), block=(THREAD_CNT, 1, 1), grid=(BLOCK_CNT, 1), shared=10)\n",
+    "\n",
+    "print(\"\\nCPU로 계산 =\")\n",
+    "print(sum_arr)\n",
+    "print(\"\\nGPU로 계산 =\")\n",
+    "print(result_arr)\n",
+    "print(result_arr.sum())"
    ]
   },
   {
