shared memory size 수정

--- a/PyCuda/reduction.ipynb
+++ b/PyCuda/reduction.ipynb
@@ -19,10 +19,10 @@
      "output_type": "stream",
      "text": [
       "arr =\n",
-      "[4 5 4 0 6 4 1 0 2 0]\n",
+      "[9 7 9 2 1 1 7 9 5 2]\n",
       "\n",
       "sum_arr\n",
-      "26\n"
+      "52\n"
      ]
     }
    ],
@@ -69,10 +69,10 @@
      "text": [
       "\n",
       "CPU로 계산 =\n",
-      "26\n",
+      "52\n",
       "\n",
       "GPU로 계산 =\n",
-      "0\n"
+      "9\n"
      ]
     }
    ],
@@ -123,10 +123,10 @@
      "text": [
       "\n",
       "CPU로 계산 =\n",
-      "26\n",
+      "52\n",
       "\n",
       "GPU로 계산 =\n",
-      "26\n"
+      "52\n"
      ]
     }
    ],
@@ -183,11 +183,11 @@
      "text": [
       "\n",
       "CPU로 계산 =\n",
-      "26\n",
+      "52\n",
       "\n",
       "GPU로 계산 =\n",
-      "[19  7]\n",
-      "26\n"
+      "[28 24]\n",
+      "52\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
     "THREAD_CNT = 5\n",
     "BLOCK_CNT = 2\n",
     "result_arr = np.zeros(BLOCK_CNT, dtype=int)\n",
-    "sum_func(cuda.In(arr), cuda.Out(result_arr), block=(THREAD_CNT, 1, 1), grid=(BLOCK_CNT, 1), shared=10)\n",
+    "sum_func(cuda.In(arr), cuda.Out(result_arr), block=(THREAD_CNT, 1, 1), grid=(BLOCK_CNT, 1), shared=THREAD_CNT)\n",
     "\n",
     "print(\"\\nCPU로 계산 =\")\n",
     "print(sum_arr)\n",
