오타수정, 파일추가

--- a/PyCuda/reduction.ipynb
+++ b/PyCuda/reduction.ipynb
@@ -19,22 +19,22 @@
      "output_type": "stream",
      "text": [
       "arr =\n",
-      "[9 7 9 2 1 1 7 9 5 2]\n",
+      "[9 3 4 4 0 8 9 3 8 9]\n",
       "\n",
-      "sum_arr\n",
-      "52\n"
+      "sum_arr =\n",
+      "57\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "arr = np.random.randint(10, size=10)\n",
+    "arr = np.random.randint(10, size=10).astype(dtype=int)\n",
     "sum_arr = np.sum(arr)\n",
     "\n",
     "print(\"arr =\")\n",
     "print(arr)\n",
-    "print(\"\\nsum_arr\")\n",
+    "print(\"\\nsum_arr =\")\n",
     "print(sum_arr)"
    ]
   },
@@ -69,7 +69,7 @@
      "text": [
       "\n",
       "CPU로 계산 =\n",
-      "52\n",
+      "57\n",
       "\n",
       "GPU로 계산 =\n",
       "9\n"
@@ -123,10 +123,10 @@
      "text": [
       "\n",
       "CPU로 계산 =\n",
-      "52\n",
+      "57\n",
       "\n",
       "GPU로 계산 =\n",
-      "52\n"
+      "57\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,11 +183,11 @@
      "text": [
       "\n",
       "CPU로 계산 =\n",
-      "52\n",
+      "57\n",
       "\n",
       "GPU로 계산 =\n",
-      "[28 24]\n",
-      "52\n"
+      "[20 37]\n",
+      "57\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
     "THREAD_CNT = 5\n",
     "BLOCK_CNT = 2\n",
     "result_arr = np.zeros(BLOCK_CNT, dtype=int)\n",
-    "sum_func(cuda.In(arr), cuda.Out(result_arr), block=(THREAD_CNT, 1, 1), grid=(BLOCK_CNT, 1), shared=THREAD_CNT)\n",
+    "sum_func(cuda.In(arr), cuda.Out(result_arr), block=(THREAD_CNT, 1, 1), grid=(BLOCK_CNT, 1, 1), shared=THREAD_CNT)\n",
     "\n",
     "print(\"\\nCPU로 계산 =\")\n",
     "print(sum_arr)\n",
