--- a/PyCuda/reduction.ipynb
+++ b/PyCuda/reduction.ipynb
@@ -19,10 +19,10 @@
      "output_type": "stream",
      "text": [
       "arr =\n",
-      "[9 3 4 4 0 8 9 3 8 9]\n",
+      "[9 3 7 5 4 8 0 9 8 3]\n",
       "\n",
       "sum_arr =\n",
-      "57\n"
+      "56\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
      "text": [
       "\n",
       "CPU로 계산 =\n",
-      "57\n",
+      "56\n",
       "\n",
       "GPU로 계산 =\n",
       "9\n"
@@ -123,10 +123,10 @@
      "text": [
       "\n",
       "CPU로 계산 =\n",
-      "57\n",
+      "56\n",
       "\n",
       "GPU로 계산 =\n",
-      "57\n"
+      "56\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,11 +183,11 @@
      "text": [
       "\n",
       "CPU로 계산 =\n",
-      "57\n",
+      "56\n",
       "\n",
       "GPU로 계산 =\n",
-      "[20 37]\n",
-      "57\n"
+      "[28 28]\n",
+      "56\n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
     "  // Shared memory에서 reduction한다\n",
     "  for ( int s=1 ; s<blockDim.x ; s*=2 )\n",
     "  {\n",
-    "    if ( 0 == tid % (2*s) )\n",
+    "    if ( 0 == tid % (2*s) && tid+s < blockDim.x )\n",
     "    {\n",
     "      sdata[tid] += sdata[tid+s];\n",
     "    }\n",
