--- a/PyCuda/dot_product.ipynb
+++ b/PyCuda/dot_product.ipynb
@@ -24,40 +24,40 @@
      "output_type": "stream",
      "text": [
       "a_mat =\n",
-      "[[3 0 4 4 0 4 4 3 2 4]\n",
-      " [2 4 2 0 4 2 2 3 2 2]\n",
-      " [1 3 2 3 4 4 2 1 3 4]\n",
-      " [0 0 1 1 3 4 3 2 0 1]\n",
-      " [3 1 1 4 4 3 0 4 1 1]\n",
-      " [0 4 2 3 2 0 2 0 0 2]\n",
-      " [2 0 1 3 4 4 2 4 2 2]\n",
-      " [0 2 3 0 3 0 3 3 2 2]\n",
-      " [1 4 2 4 2 2 1 3 4 3]\n",
-      " [4 3 2 3 1 1 0 0 1 2]]\n",
+      "[[1 4 0 4 1 4 2 2 0 3]\n",
+      " [3 1 0 4 1 3 0 3 4 1]\n",
+      " [2 1 1 3 3 0 1 2 3 2]\n",
+      " [1 2 2 2 2 0 1 0 4 2]\n",
+      " [2 4 1 1 1 0 0 3 2 2]\n",
+      " [3 3 3 4 0 4 1 4 3 1]\n",
+      " [3 0 3 4 4 0 3 4 2 3]\n",
+      " [2 4 4 3 3 0 3 3 2 3]\n",
+      " [4 3 2 2 3 4 2 0 0 1]\n",
+      " [3 3 2 4 2 3 2 2 2 3]]\n",
       "\n",
       "b_mat =\n",
-      "[[1 2 3 0 3 3 1 1 4 4]\n",
-      " [1 1 2 2 0 0 1 3 0 1]\n",
-      " [1 2 4 1 3 3 0 3 0 3]\n",
-      " [3 0 3 1 3 3 0 0 3 2]\n",
-      " [3 0 2 1 0 0 0 4 4 3]\n",
-      " [0 4 3 2 4 1 1 2 3 2]\n",
-      " [3 4 2 2 1 4 4 3 0 0]\n",
-      " [1 2 1 1 1 3 3 1 3 4]\n",
-      " [3 3 1 0 1 2 4 4 1 3]\n",
-      " [0 4 2 0 2 4 0 1 0 0]]\n",
+      "[[3 2 1 0 1 0 4 0 2 4]\n",
+      " [3 0 2 2 4 4 1 0 2 3]\n",
+      " [2 2 1 1 1 2 1 0 3 0]\n",
+      " [2 2 0 2 4 1 3 3 2 1]\n",
+      " [1 2 0 2 1 3 3 4 0 3]\n",
+      " [1 1 4 1 1 3 3 3 3 2]\n",
+      " [3 3 4 4 0 3 1 3 1 2]\n",
+      " [4 1 4 1 1 4 0 2 4 1]\n",
+      " [0 4 0 1 1 3 4 0 0 3]\n",
+      " [2 1 4 1 1 1 3 3 1 3]]\n",
       "\n",
       "ret_mat =\n",
-      "[[40 74 70 27 66 82 40 50 47 58]\n",
-      " [35 48 49 25 31 43 33 59 41 52]\n",
-      " [43 60 62 28 48 55 31 63 47 52]\n",
-      " [24 38 35 21 29 32 22 35 33 30]\n",
-      " [36 36 51 21 43 45 23 40 62 61]\n",
-      " [27 24 37 19 21 31 12 34 17 22]\n",
-      " [40 52 53 24 46 54 34 49 59 59]\n",
-      " [32 40 37 19 21 42 31 49 23 38]\n",
-      " [43 52 56 25 43 56 36 56 43 56]\n",
-      " [24 30 45 14 36 38 12 31 33 39]]\n"
+      "[[48 27 53 35 43 52 46 47 43 46]\n",
+      " [38 39 33 23 35 45 56 34 38 46]\n",
+      " [35 37 25 26 29 40 47 34 26 42]\n",
+      " [26 35 19 24 27 37 43 23 19 38]\n",
+      " [39 23 31 20 31 42 33 19 31 39]\n",
+      " [57 44 52 33 46 63 58 38 59 51]\n",
+      " [58 52 46 40 35 56 59 54 45 53]\n",
+      " [62 47 50 44 45 66 54 45 48 56]\n",
+      " [44 33 40 31 34 46 53 39 39 51]\n",
+      " [55 44 51 38 45 58 63 48 48 58]]\n"
      ]
     }
    ],
@@ -109,35 +109,35 @@
      "text": [
       "\n",
       "GPU로 계산 =\n",
-      "[[40 74 70 27 66 82 40 50 47 58]\n",
-      " [35 48 49 25 31 43 33 59 41 52]\n",
-      " [43 60 62 28 48 55 31 63 47 52]\n",
-      " [24 38 35 21 29 32 22 35 33 30]\n",
-      " [36 36 51 21 43 45 23 40 62 61]\n",
-      " [27 24 37 19 21 31 12 34 17 22]\n",
-      " [40 52 53 24 46 54 34 49 59 59]\n",
-      " [32 40 37 19 21 42 31 49 23 38]\n",
-      " [43 52 56 25 43 56 36 56 43 56]\n",
-      " [24 30 45 14 36 38 12 31 33 39]]\n",
+      "[[48 27 53 35 43 52 46 47 43 46]\n",
+      " [38 39 33 23 35 45 56 34 38 46]\n",
+      " [35 37 25 26 29 40 47 34 26 42]\n",
+      " [26 35 19 24 27 37 43 23 19 38]\n",
+      " [39 23 31 20 31 42 33 19 31 39]\n",
+      " [57 44 52 33 46 63 58 38 59 51]\n",
+      " [58 52 46 40 35 56 59 54 45 53]\n",
+      " [62 47 50 44 45 66 54 45 48 56]\n",
+      " [44 33 40 31 34 46 53 39 39 51]\n",
+      " [55 44 51 38 45 58 63 48 48 58]]\n",
       "\n",
       "CPU로 계산 =\n",
-      "[[40 74 70 27 66 82 40 50 47 58]\n",
-      " [35 48 49 25 31 43 33 59 41 52]\n",
-      " [43 60 62 28 48 55 31 63 47 52]\n",
-      " [24 38 35 21 29 32 22 35 33 30]\n",
-      " [36 36 51 21 43 45 23 40 62 61]\n",
-      " [27 24 37 19 21 31 12 34 17 22]\n",
-      " [40 52 53 24 46 54 34 49 59 59]\n",
-      " [32 40 37 19 21 42 31 49 23 38]\n",
-      " [43 52 56 25 43 56 36 56 43 56]\n",
-      " [24 30 45 14 36 38 12 31 33 39]]\n"
+      "[[48 27 53 35 43 52 46 47 43 46]\n",
+      " [38 39 33 23 35 45 56 34 38 46]\n",
+      " [35 37 25 26 29 40 47 34 26 42]\n",
+      " [26 35 19 24 27 37 43 23 19 38]\n",
+      " [39 23 31 20 31 42 33 19 31 39]\n",
+      " [57 44 52 33 46 63 58 38 59 51]\n",
+      " [58 52 46 40 35 56 59 54 45 53]\n",
+      " [62 47 50 44 45 66 54 45 48 56]\n",
+      " [44 33 40 31 34 46 53 39 39 51]\n",
+      " [55 44 51 38 45 58 63 48 48 58]]\n"
      ]
     }
    ],
    "source": [
     "# Kernel code\n",
     "kernel_code = \"\"\"\n",
-    "__device__ __constant__ int n;\n",
+    "__constant__ int n;\n",
     "\n",
     "__global__ void mul(int* in_arr1, int* in_arr2, int* out_arr)\n",
     "{\n",
