--- a/PyCuda/simple_add.ipynb
+++ b/PyCuda/simple_add.ipynb
@@ -22,13 +22,13 @@
      "output_type": "stream",
      "text": [
       "a_arr =\n",
-      "[6 0 7 8 5 4]\n",
+      "[9 0 1 5 2 8]\n",
       "\n",
       "b_arr =\n",
-      "[4 1 4 1 4 3]\n",
+      "[7 0 6 6 8 7]\n",
       "\n",
       "sum_arr =\n",
-      "[10  1 11  9  9  7]\n"
+      "[16  0  7 11 10 15]\n"
      ]
     }
    ],
@@ -78,10 +78,10 @@
      "text": [
       "\n",
       "GPU로 계산 =\n",
-      "[10  1 11  9  9  7]\n",
+      "[16  0  7 11 10 15]\n",
       "\n",
       "CPU로 계산 =\n",
-      "[10  1 11  9  9  7]\n"
+      "[16  0  7 11 10 15]\n"
      ]
     }
    ],
@@ -132,10 +132,10 @@
      "text": [
       "\n",
       "GPU로 계산 =\n",
-      "[10  1 11  9  9  7]\n",
+      "[16  0  7 11 10 15]\n",
       "\n",
       "CPU로 계산 =\n",
-      "[10  1 11  9  9  7]\n"
+      "[16  0  7 11 10 15]\n"
      ]
     }
    ],
@@ -183,13 +183,13 @@
      "output_type": "stream",
      "text": [
       "a_arr =\n",
-      "[6 0 7 8 5 4]\n",
+      "[9 0 1 5 2 8]\n",
       "\n",
       "누적하여 더하기\n",
       "[0 0 0 0 0 0]\n",
-      "[6 0 7 8 5 4]\n",
-      "[12  0 14 16 10  8]\n",
-      "[18  0 21 24 15 12]\n"
+      "[9 0 1 5 2 8]\n",
+      "[18  0  2 10  4 16]\n",
+      "[27  0  3 15  6 24]\n"
      ]
     }
    ],
@@ -230,13 +230,13 @@
      "output_type": "stream",
      "text": [
       "a_arr =\n",
-      "[7 1 8 0 1 1 1 5 0 0]\n",
+      "[6 2 9 6 2 5 6 3 0 7]\n",
       "\n",
       "b_arr =\n",
-      "[8 6 9 2 4 2 7 9 7 3]\n",
+      "[6 7 6 5 9 5 7 9 5 7]\n",
       "\n",
       "sum_arr =\n",
-      "[15  7 17  2  5  3  8 14  7  3]\n"
+      "[12  9 15 11 11 10 13 12  5 14]\n"
      ]
     }
    ],
@@ -256,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -264,17 +266,17 @@
      "text": [
       "\n",
       "GPU로 계산 =\n",
-      "[15  7 17  2  5  3  8 14  7  3]\n",
+      "[12  9 15 11 11 10 13 12  5 14]\n",
       "\n",
       "CPU로 계산 =\n",
-      "[15  7 17  2  5  3  8 14  7  3]\n"
+      "[12  9 15 11 11 10 13 12  5 14]\n"
      ]
     }
    ],
    "source": [
     "# Kernel code\n",
     "kernel_code = \"\"\"\n",
-    "__device__ __constant__ int out_arr_size;\n",
+    "__constant__ int out_arr_size;\n",
     "\n",
     "__global__ void add(int* in_arr1, int* in_arr2, int* out_arr)\n",
     "{\n",
