--- a/190413_GoogleDrive_JunHyeong/sample1.ipynb
+++ b/190413_GoogleDrive_JunHyeong/sample1.ipynb
@@ -148,30 +148,26 @@
       "\n",
       "##### 폴더/파일 목록 #####\n",
       "\n",
-      "{'id': '1Lde5wC3wacAmUIIiVZ4qDFWd89IouOft',\n",
-      " 'mimeType': 'application/vnd.google-apps.folder',\n",
-      " 'name': 'sub_folder2',\n",
-      " 'parents': ['1eZDWJyWm_ORYzldgrEtcZTGIINfrrXdk']}\n",
-      "\n",
-      "{'id': '17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ',\n",
-      " 'mimeType': 'application/vnd.google-apps.folder',\n",
-      " 'name': 'sub_folder1',\n",
-      " 'parents': ['1eZDWJyWm_ORYzldgrEtcZTGIINfrrXdk']}\n",
-      "\n",
-      "{'id': '1T0Qb5QsHh9C3lAgDzCtHWhPTZtoD98X2',\n",
-      " 'mimeType': 'text/plain',\n",
-      " 'name': 'test2.txt',\n",
-      " 'parents': ['1eZDWJyWm_ORYzldgrEtcZTGIINfrrXdk']}\n",
-      "\n",
-      "{'id': '1Gh1Xdgp9FLFfsf_20Ou_V_mULhz9ZXk5',\n",
-      " 'mimeType': 'text/plain',\n",
-      " 'name': 'test1.txt',\n",
-      " 'parents': ['1eZDWJyWm_ORYzldgrEtcZTGIINfrrXdk']}\n",
-      "\n",
-      "{'id': '1EFzqg-bfKXOjHP3q7NNUM6QYuEln8sR5',\n",
-      " 'mimeType': 'text/plain',\n",
-      " 'name': 'Test.txt',\n",
-      " 'parents': ['1eZDWJyWm_ORYzldgrEtcZTGIINfrrXdk']}\n"
+      "[{'id': '1Lde5wC3wacAmUIIiVZ4qDFWd89IouOft',\n",
+      "  'mimeType': 'application/vnd.google-apps.folder',\n",
+      "  'name': 'sub_folder2',\n",
+      "  'parents': ['1eZDWJyWm_ORYzldgrEtcZTGIINfrrXdk']},\n",
+      " {'id': '17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ',\n",
+      "  'mimeType': 'application/vnd.google-apps.folder',\n",
+      "  'name': 'sub_folder1',\n",
+      "  'parents': ['1eZDWJyWm_ORYzldgrEtcZTGIINfrrXdk']},\n",
+      " {'id': '1T0Qb5QsHh9C3lAgDzCtHWhPTZtoD98X2',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'test2.txt',\n",
+      "  'parents': ['1eZDWJyWm_ORYzldgrEtcZTGIINfrrXdk']},\n",
+      " {'id': '1Gh1Xdgp9FLFfsf_20Ou_V_mULhz9ZXk5',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'test1.txt',\n",
+      "  'parents': ['1eZDWJyWm_ORYzldgrEtcZTGIINfrrXdk']},\n",
+      " {'id': '1EFzqg-bfKXOjHP3q7NNUM6QYuEln8sR5',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'Test.txt',\n",
+      "  'parents': ['1eZDWJyWm_ORYzldgrEtcZTGIINfrrXdk']}]\n"
      ]
     }
    ],
@@ -184,10 +180,91 @@
     "\n",
     "files = response.get(\"files\", [])\n",
     "\n",
-    "print(\"\\n##### 폴더/파일 목록 #####\")\n",
-    "for f in files:\n",
-    "    print(\"\")\n",
-    "    pprint.pprint(f)"
+    "print(\"\\n##### 폴더/파일 목록 #####\\n\")\n",
+    "pprint.pprint(files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Paging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### 폴더/파일 목록 #####\n",
+      "\n",
+      "[{'id': '1hlfZu-LmjCYKduwE7ft8keoEQi_6_t4t',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'sub_file_1.txt',\n",
+      "  'parents': ['17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ']},\n",
+      " {'id': '1gmtqZvJsNku3pbw2XIDFxP2arc_vMaH7',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'sub_file_2.txt',\n",
+      "  'parents': ['17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ']},\n",
+      " {'id': '1Ei3-514r28E1HYAMYxrI7aE9l2adT1hX',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'sub_file_3.txt',\n",
+      "  'parents': ['17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ']}]\n",
+      "\n",
+      "##### nextPageToken #####\n",
+      "\n",
+      "~!!~AI9FV7S5VqiKETIZEDpR9dbC4ibrDxLayLpFdkyxtMfhkbd5_dmpc4zusmKD0i6vxZtqa5lm5wG63ZVTpKAhLmhx8GM5ygYYP6r0WPfsI93yWiielcccsGAXOg-fROqz7GHzx-xy7eyKya6OJ8OT1inJsj7m_GGSBCioSMmQNU_dpivY8OZ5HxIyYsX93s3YnJ8cfFSPv2DeYCrqNLDRVkOx4G3Q-GHvUWAm44ZHHUYaOcfphSBe_nacFthPnHrNNpRc8C3cIlPaNabov4iTuNATy_R5gvI0YVsn4fIIofinkMQJRfg83PqdOoTB21uva5E22GVu2IuLasIZmQqIPeRDr-puxduHuw_RNTyIIVYRWRxaBBoGmNY=\n",
+      "\n",
+      "##### 폴더/파일 목록 #####\n",
+      "\n",
+      "[{'id': '1BJyvc14JilzVckwU4I6I4IeLaH8FiWgl',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'sub_file_4.txt',\n",
+      "  'parents': ['17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ']},\n",
+      " {'id': '1PnCSnQe8o0KAhk2K_ZEg3EVxmKNY3QEL',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'sub_file_5.txt',\n",
+      "  'parents': ['17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ']}]\n",
+      "\n",
+      "##### nextPageToken #####\n",
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "SUB_FOLDER_1_ID = \"17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ\"\n",
+    "page_token = None\n",
+    "\n",
+    "while True:\n",
+    "    print(\"\\n##### 폴더/파일 목록 #####\\n\")\n",
+    "\n",
+    "    response = drive.files().list(\n",
+    "        q=\"'{0}' in parents\".format(SUB_FOLDER_1_ID),\n",
+    "        spaces=\"drive\",\n",
+    "        fields=\"nextPageToken, files(id, name, mimeType, parents)\",\n",
+    "        pageSize=3,\n",
+    "        pageToken=page_token,\n",
+    "        orderBy=\"name\",\n",
+    "    ).execute()\n",
+    "\n",
+    "    files = response.get(\"files\", [])\n",
+    "    pprint.pprint(files)\n",
+    "\n",
+    "    print(\"\\n##### nextPageToken #####\\n\")\n",
+    "\n",
+    "    page_token = response.get('nextPageToken', None)\n",
+    "    print(page_token)\n",
+    "\n",
+    "    if page_token is None:\n",
+    "        break;"
    ]
   },
   {
