--- a/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
+++ b/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
@@ -4,25 +4,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Google Drive 활용\n",
+    "<div style=\"line-height: 70px; text-align: center; font-size: 50px; font-weight: bold;\">Google Drive 활용</div>\n",
+    "<div style=\"line-height: 30px; text-align: center; font-size: 20px; font-weight: bold;\">DAT 이준형</div>\n",
+    "<div style=\"height: 3px; margin-top: 10px; margin-bottom: 10px; background-color: silver;\"></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Google Drive API 사용설정\n",
+    "***\n",
     "\n",
-    "## Google Drive API 사용설정\n",
     "\n",
+    "### 1.1. 프로젝트 선택 또는 새 프로젝트 생성\n",
+    "***\n",
     "\n",
-    "[Google Developers Console](https://console.developers.google.com/)에서 Google Drive API를 사용할 프로젝트를 선택한다.  \n",
+    "[Google API Console](https://console.developers.google.com/)에서 Google Drive API를 사용할 프로젝트를 선택한다.  \n",
     "프로젝트가 없다면 다음과 같이 새 프로젝트를 만든다.\n",
     "\n",
-    "### 새 프로젝트 생성\n",
     "![새 프로젝트 생성](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/mk_project.gif)\n",
     "\n",
-    "### Google Drive API를 사용설정 한다.\n",
+    "\n",
+    "### 1.2. Google Drive API 사용설정\n",
+    "***\n",
+    "\n",
     "![API 사용설정](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/enable_gd_api.gif)\n",
     "\n",
-    "### 서비스 계정 키를 만든다.\n",
+    "\n",
+    "### 1.3. 사용자 인증 정보 생성\n",
+    "***\n",
+    "\n",
+    "서버에서 사용할 것이기 때문에 서비스 계정 키를 만든다.  \n",
+    "다운로드되는 서비스 계정 키는 다시 받을 수 없기 때문에 잘 보관하자.\n",
+    "\n",
     "![서비스 계정 키 생성](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/mk_service_key.gif)\n",
     "\n",
-    "### 서비스 계정의 이메일로 폴더에 권한을 준다.\n",
-    "![폴더에 권한](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/set_auth_to_folder.gif)\n"
+    "\n",
+    "### 1.4. Google Drive의 폴더에 권한설정\n",
+    "***\n",
+    "\n",
+    "서비스 계정의 이메일로 사용할 폴더에 권한을 준다.\n",
+    "\n",
+    "![폴더에 권한](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/set_auth_to_folder.gif)"
    ]
   },
   {
