--- a/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
+++ b/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"line-height: 70px; text-align: center; font-size: 50px; font-weight: bold;\">Google Drive 활용</div>\n",
-    "<div style=\"line-height: 30px; text-align: center; font-size: 20px; font-weight: bold;\">DAT 이준형</div>\n",
-    "<div style=\"height: 3px; margin-top: 10px; margin-bottom: 10px; background-color: silver;\"></div>"
+    "# Google Drive 활용\n",
+    "DAT 이준형\n",
+    "***"
    ]
   },
   {
